사이드 바 대규모 수술 성공적

--- a/webapp/assets/css/setting/setting.css
+++ b/webapp/assets/css/setting/setting.css
@@ -48,72 +48,6 @@
 
 
 
-/* 사이드 바 */
-
-#settingsMenu{
-	width: 17%;
-	float: left;
-	margin-right: 30px;
-	padding: 0px;
-	position: relative;
-}
-
-#settingsMenu li{
-	height: 42px;
-	border-top: 1px;
-	border-left: 1px;
-	border-right: 1px;
-	border-color: rgb(192, 192, 192);
-	border-style: solid;
-	text-align: left;
-	line-height: 42px;
-}
-
-#settingsMenu .settingSubLi{
-	height: 40px;
-}
-
-#settingsMenu .noTopBorder{
-	border-top: none;
-	padding-top: 0px;
-}
-
-#settingsMenu li a{
-	padding: 10px;
-	font-size: 14px;
-	text-decoration: none;
-	color: #212529;
-	display: block;
-	line-height: 20px;
-}
-
-#settingsMenu li .setting_sub{
-	padding-left: 30px;
-	text-decoration: none;
-	color: #212529;
-}
-
-
-#settingsMenu .last_li{
-	border-bottom: 1px;
-	border-color: rgb(192, 192, 192);
-	border-style: solid;
-}
-
-
-#settingsMenu .selected{
-	background-color: rgb(230, 126, 34);
-}
-#settingsMenu .selected a{
-	color: white;
-}
-
-
-.selectedBold{
-	font-weight: bold;
-}
-
-
 
 
 
@@ -198,6 +132,28 @@
 	border: 1px solid rgb(133, 133, 133); 
 	border-radius: 2px;
 	margin-left:6px;
+}
+
+
+
+.imageArea label #inputFile2 {
+	display: none;
+}
+
+.imageArea .upload-btn {
+	width: 107px;
+    border: 1px solid rgb(133, 133, 133); 
+    padding: 6px 12px;
+    display: block;
+    cursor: pointer;
+	border-radius: 2px;
+	margin-left: 184.5px;
+	margin-top: 16px;
+}
+
+.imageArea .upload-btn span{
+    font-size: 15px;
+    margin-top: 0;
 }
 
 
