--- a/webapp/assets/css/mobileWeb/walkStart.css
+++ b/webapp/assets/css/mobileWeb/walkStart.css
@@ -115,7 +115,7 @@
 		height: 60px;
 		display: flex;
 		align-items: center;
-		justify-content: space-around; /*  */
+		justify-content: flex-start; /*  */
 	}	
 	
 	/* 프로필 컨테이너 스타일링 */
@@ -124,9 +124,9 @@
 	    position: relative;
 	    display: flex;
 	}
-	
+		
 	/* 프로필 이미지 스타일링 */
-	.profile-circles {
+	.profile-circles {	    
 	    width: 330px;  /*원하는 너비로 설정 */
 	    overflow: hidden;
 	    position: relative;
