--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -449,7 +449,7 @@ h2{
 	border-style: solid;
   	border-color:#dee2e6;
 	width: 780px;
-	height: 204px;
+	/*height: 204px;*/
 	float: left;
 	   
    }
@@ -472,7 +472,7 @@ h2{
   
   .MRuserName1{
 	  margin-top:5px;
-	  font-size: 14px;
+	  font-size: 18px;
 	  font-weight: bold;
 	  width: 120px;
 	  
@@ -508,6 +508,12 @@ h2{
 	  margin-top: 20px;
 	  display: flow-root;
 	  
+	  border-style: solid;
+    border-color: #dee2e6;
+
+    /* 하단(border-bottom)에만 테두리를 추가합니다. */
+    border-width: 0 0 2px 0;
+	  
 	  
   }
   
@@ -519,7 +525,7 @@ h2{
   }
   .MRrecordData{
 	  font-size: 20px;
-	  width: 90px;
+	  width: 120px;
   }
   
   .MRtimeBox{
@@ -527,7 +533,7 @@ h2{
 	  
   }
   .MRlabel{
-	  font-size: 12px;
+	  font-size: 14px;
 	  width: 90px;
   }
   
@@ -535,13 +541,16 @@ h2{
 	  text-align: center;
   }
   
-  .MRdogCardBox{
-	  width:300px;
-	  height: 100px;
-	  
-	  float: right;
-	  padding: 20px;
-  }
+ .MRdogCardBox {
+    padding-left: 5px;
+    float: right;
+    /* padding: 20px; */
+    border-style: solid;
+    border-color: #dee2e6;
+
+    /* 하단(border-bottom)에만 테두리를 추가합니다. */
+    border-width: 0 0 2px 0;
+}
   
   .MRdogCards{
 	  margin-top: 5px;
@@ -606,12 +615,19 @@ h2{
 	  
   }
   
+  .walkLogContent{
+	  float: left;
+	  width: 600px;
+	  margin-left: 110px;
+	  margin-top: 10px;
+  }
+  
   .MRwalkRecordSection{
 	  padding:10px;
 	  margin-top: 10px;
 	  margin-bottom: 10px;
 	  width: 780px;
-	  height: 760px;
+	  /*height: 760px;*/
 	  border-style: solid;
   	border-color:#dee2e6;
 	  
