--- a/webapp/assets/css/setting/setting.css
+++ b/webapp/assets/css/setting/setting.css
@@ -596,7 +596,7 @@ input::-webkit-inner-spin-button {
 	border-bottom: 1px solid rgb(192, 192, 192);
 }
 
-#friendProfile .listBox .friendList tr td .ok{
+#friendProfile .listBox .friendList tr td .okBtn{
 	background-color: dodgerblue;
 }
 
