셀렉트키 가져오기 완료

--- a/webapp/assets/css/mobileWeb/walkEnd.css
+++ b/webapp/assets/css/mobileWeb/walkEnd.css
@@ -283,3 +283,16 @@
 	    background-color: rgb(114, 114, 114);
 	}
 	
+	/* 첨부파일 */
+	.file-list .filebox p {
+	    font-size: 14px;
+	    margin-top: 10px;
+	    display: inline-block;
+	}
+	.file-list .filebox .delete i{
+	    color: #ff5353;
+	    margin-left: 5px;
+	}
+	
+	
+	
