--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -239,7 +239,7 @@
 	height: 66px;
 	border-style: solid;
 	 border-color:#dee2e6;
-  	border-width: 0 0 1px 0 ;
+  	border-width: 1px 0 1px 0 ;
   	display: flow-root;
 }
 
