--- a/webapp/assets/css/walkTrail/trailForm.css
+++ b/webapp/assets/css/walkTrail/trailForm.css
@@ -20,6 +20,9 @@
 	height: 80px;
 	width: 100%;
 }
+.segment-map-info #trail-address {
+	width: 300px;
+}
 
 /* 등록 버튼 추가 */
 .segment-map-info .fa-circle-check {
@@ -27,6 +30,7 @@
 	margin: 0px 10px;
 	color: #0d6efd;
 	font-size: 34px;
+	cursor: pointer;
 }
 .segment-map-info .fa-circle-check:hover {
 	color: rgb(1, 48, 118);
@@ -85,6 +89,12 @@
 .input-group > button.btn {
 	--bs-btn-border-color: #dee2e6;
 }
+.input-group > button.true {
+	background-color: #0d6efd;
+}
+.input-group > button > i.true {
+	color: white;
+}
 
 /* tag */
 .tag-btn {
@@ -125,6 +135,10 @@
 	height: 25px;
 	margin-left: 220px;
 	margin-bottom: 10px;
+	background-color: var(--bs-body-color);
+}
+.form-check > button.new-draw {
+	background-color: #6c757d;
 }
 
 /* map */
@@ -133,6 +147,25 @@
 	width: 800px;
 	float: right;
 	margin-top: 30px;
+}
+
+/* infoBox */
+.infoBox {
+	display: flow-root;
+	width: 800px;
+	float: right;
+}
+.infoBox > span {
+	color: #212529;
+    font-size: 14px;
+}
+.infoBox .drawBtn {
+	height: 25px;
+	background-color: var(--bs-body-color);
+	float: right;
+}
+.infoBox .new-draw {
+	background-color: #6c757d;
 }
 
 /***** trailModifyForm *****/
