--- a/webapp/assets/css/walkTrail/trailMain.css
+++ b/webapp/assets/css/walkTrail/trailMain.css
@@ -80,11 +80,6 @@
 .modal .modal-dialog .modal-content .modal-body .step2 {
 	margin-top: 10px;
 }
-.modal .modal-dialog .modal-content .modal-body .form-check {
-	float: right;
-	text-align: right;
-	font-size: 14px;
-}
 .modal .modal-dialog .modal-content .modal-footer > button {
 	height: 34px;
 }
@@ -129,10 +124,7 @@
 	height: 100%;
 	width: 260px;
 	float: left;
-	overflow-y: scroll;
-}
-.segments-sidebar::-webkit-scrollbar {
-	height: 600px;
+	overflow: hidden;
 }
 .segments-sidebar > h6 {
 	padding-left: 35px;
@@ -143,23 +135,23 @@
 }
 .segments-sidebar > ul > li {
 	position: relative;
-	height: 60px;
-	width: 230px;
+	height: 58px;
+	height: 56px;
+	width: 250px;
 	margin: 5px 0px;
 	list-style: none;
 }
 .segments-sidebar > ul > li:hover {
 	background-color: rgb(255, 215, 196);
 }
-.segments-sidebar > ul > li .fa-solid {
+.segments-sidebar > ul > li.nonList:hover {
+	background-color: white;
+}
+.segments-sidebar > ul > li > img {
 	height: 30px;
-	width: 23px;
+	width: 30px;
 	margin: 10px;
 	float: left;
-	color: #fc5200;
-}
-.segments-sidebar > ul > li .selected-maker {
-	color: #0d6efd;
 }
 .segments-sidebar > ul > li > div {
 	padding-top: 5px;
@@ -170,6 +162,7 @@
 	color: #494950;
 	font-size: 14px;
 	text-align: right;
+	margin-right: 10px;
 }
 .segments-sidebar > ul > li > div > span.sideBar-title {
 	font-weight: bold;
@@ -186,6 +179,90 @@
 	height: 100%;
 	width: 960px;
 	float: right;
+}
+
+/* tooltip */
+.trail-tootip {
+	padding: 10px;
+	display: flow-root;
+	width: 350px;
+	font-weight: bolder;
+}
+.trail-tootip h5 {
+	font-weight: bold;
+}
+.trailInfo {
+	display: flex;
+	margin-bottom: 15px;
+	font-weight: bold;
+}
+.trailInfo .info {
+	display: flex;
+	flex-direction: column;
+	margin-right: 15px;
+	padding-left: 5px;
+}
+.trailInfo .info .detail-text {
+	color: rgba(0,0,0,0.75);
+}
+.trailInfo .info .detail-info,
+.userInfo .info .detail-text .detail-info {
+	font-size: 12px;
+    color: #979797;
+}
+.trailInfo .cntInfo .detail-text {
+	background-color: #fc5200;
+	color: white;
+    padding-left: 2px;
+    border-radius: 2%;
+    width: 35px;
+}
+.trailInfo .vr {
+	margin-right: 15px;
+}
+.userInfo {
+	display: flex;
+	align-items: center;
+}
+.userInfo .info {
+	display: flex;
+	align-items: center;
+}
+.userInfo .userDetail {
+    height: 70px;
+    width: 225px;
+    background-color: #EBEBEB;
+    padding: 10px 15px;
+    margin-right: 15px;
+}
+.userInfo .userDetail > img {
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+}
+.userInfo .info .detail-text {
+	display: flex;
+	flex-direction: column;
+	margin-left: 20px;
+}
+.userInfo .userBtn {
+    height: 45px;
+    padding: 5px 10px;
+    background-color: #fc5200;
+    color: white;
+    font-weight: bold;
+    border: 1px solid #fc5200;
+    border-radius: 5%;
+    text-decoration: none;
+}
+.userInfo .userBtn:hover {
+	border-color: rgb(255, 215, 196);
+}
+
+/* marker */
+.markerImg {
+	height: 35px;
+	width: 35px;
 }
 
 /***** trailNonList *****/
@@ -209,15 +286,27 @@
 	margin: 0px 10px;
 	color: #0d6efd;
 	font-size: 34px;
+	cursor: pointer;
 }
 .segment-map-filters .fa-circle-plus:hover,
 .segment-map-filters .fa-pen-to-square:hover {
 	color: rgb(1, 48, 118);
 }
 
-/***** trailMainAddList *****/
+/***** trailMainWalkLog *****/
 
 /* 대표 이름색 변경 */
 .contents .myList {
 	color: #fc5200;
+}
+.segment-map-filters > span {
+	color: #212529;
+    font-size: 14px;
+}
+
+.walkLog {
+	overflow-y: scroll;
+}
+.walkLog::-webkit-scrollbar {
+	height: 600px;
 }
