동아리 모임 실험

--- a/webapp/assets/css/walkMeeting/clubDetail.css
+++ b/webapp/assets/css/walkMeeting/clubDetail.css
@@ -52,6 +52,11 @@ body .global-header nav ul {
 	
 }
 
+.wrap .clubInfo .clubTitle a{
+	text-decoration: none;
+	color: #212529;
+}
+
 .wrap .clubInfo p {
 	margin-bottom: 4px;
 }
