--- a/webapp/assets/css/mobileWeb/walkStart.css
+++ b/webapp/assets/css/mobileWeb/walkStart.css
@@ -127,7 +127,7 @@
 		
 	/* 프로필 이미지 스타일링 */
 	.profile-circles {	    
-	    width: 330px;  /*원하는 너비로 설정 */
+	    width: 380px;  /*원하는 너비로 설정 */
 	    overflow: hidden;
 	    position: relative;
 	    display: flex;
@@ -136,14 +136,13 @@
 	}
 	
 	.profile-circle {
-	    width: 44px; /* 프로필 동그라미의 너비 설정 */
-	    height: 44px; /* 프로필 동그라미의 높이 설정 */
 	    border-radius: 50%; /* 원 모양으로 만들기 */
 	    margin-left: 5px; /* 동그라미 사이의 간격 설정 */	    
 	    margin: 5px,5px; /* 동그라미 상하 간격 설정 */
 	    overflow: hidden; /* 이미지를 동그라미 안에 잘라내기 */
 	    display: inline-block; /* 가로로 정렬하기 */
 	    border:3px solid rgb(79, 79, 79);
+		position: relative; /* 부모 요소를 기준으로 자식 요소를 위치시키기 위해 추가 */
 	}
 	
 	.choiceRed {
@@ -152,9 +151,10 @@
 	
 	/*강아지프로필*/
 	.profile-circle img {
-	    width: 100%; /* 이미지를 동그라미의 크기에 맞춤 */
-	    height: 100%; /* 이미지를 동그라미의 크기에 맞춤 */
+	    width: 48px; /* 이미지를 동그라미의 크기에 맞춤 */
+	    height: 48px; /* 프로필 동그라미의 높이 설정 */
 	    object-fit: cover; /* 이미지를 비율 유지하며 동그라미 안에 맞춤 */
+    	object-position: center center; /* 이미지를 가운데 정렬 */
 	    vertical-align: middle; /* 수직 가운데 정렬 */
 	}
 	
