--- a/webapp/assets/css/walkTrail/trailDetail.css
+++ b/webapp/assets/css/walkTrail/trailDetail.css
@@ -50,7 +50,21 @@
 
 /* 프로필 */
 .detail-bar > img,
-.comment-info > img {
+.comment-info > img,
+.ranking-detail-bar > img,
+.img-info-detail > img,
+.dog-img > img {
+    border-radius: 50%;
+}
+
+.img-info-detail .imgCount {
+    height: 25px;
+    width: 25px;
+    text-align: center;
+    line-height: 25px;
+    margin-left: 10px;
+    background-color: #fc5200;
+    color: white;
     border-radius: 50%;
 }
 
@@ -517,7 +531,7 @@
 }
 .comment-detail {
 	height: 180px;
-	padding-right: 80px;
+	/*padding-right: 80px;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -556,7 +570,7 @@
 .comment-info {
 	display: flex;
     align-items: center;
-    width: 230px;
+    width: 265px;
 }
 .comment-info > img,
 .img-info > div > img {
