--- a/webapp/assets/css/walkMeeting/meetingDetail.css
+++ b/webapp/assets/css/walkMeeting/meetingDetail.css
@@ -15,31 +15,19 @@
 .inputTitle {
 	font-size: 20px;
 	font-weight: 500;
-	margin-top: 30px;
-}
-
-.inputGroup {
-	width: 100%;
-}
-
-.inputGroup .inputItem {
-	width: 218px;
-} 
-
-.inputTitle {
-	
+	margin-top: 20px;
 	margin-bottom: 10px;
 }
 
-.inputMember{
-	width: 600px;	
+.inputGroup{
+	width: 100%;
+	float: left;
+	margin-bottom: 40px;
 }
 
-.mradio{
-	margin: 0 5px 0 30px;
-}
-.fmradio{
-	margin: 0 5px 0 0;
+.inputGroup .items{
+	float: left;
+	margin-right: 100px;
 }
 
 
@@ -118,43 +106,23 @@
 }
 
 
-
-
-#map {
-	margin-top: 15px;
-	height: 500px;
+.inputItem{
+	width: 100%;	
 }
 
-#map .trailDetail {
-	z-index: 10;
-	position: absolute;
-	width: 400px;
-	height: 500px;
-	left: 0;
-	background-color: rebeccapurple;
-}
-#map .trailDetail .trailTitle {
-	font-size: 25px;
-	font-weight: bold;
-	text-align: center;
+.mapImg{
+	margin-top: 10px;
+	width: 100%;
+	height: 400px;
 }
 
-.inputGroup .inputItem:last-child {
-	width: 300px;
-}
 
-.inputGroup .inputItem .form-switch input {
-	width: 68px;
-	height: 34px;
-	margin-top: 0;
-}
-
-.inputGroup .inputItem .form-switch label {
-	line-height: 34px;
+.contents .form-control{
+	margin-bottom: 60px;
 }
 
 .contents .meetingTitle {
-	width: 600px;
+	width: 400px;
 }
 
 .btnArea {
