--- a/webapp/assets/css/walkMeeting/meetingList.css
+++ b/webapp/assets/css/walkMeeting/meetingList.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+.button{
+	color: #fff;
+	background-color: rgb(230, 126, 34);
+	float: right;
+	text-decoration: none;
+	border-radius: 4px;
+	padding: 6px 16px;
+	display: inline;
+	border: none;
+}
+
 .coverImg {
 	width:100%;
     height:100%;
@@ -26,6 +37,87 @@
 	display: flow-root;
 }
 
+.infoHeader .searchBox{
+	float: right;
+	display: block;
+}
+.searchBox #searchBtn {
+    height: 30px;
+    font-size: 14px;
+    float: right;
+    line-height: 15px;
+    margin-left: 5px;
+}
+.searchBox select {
+    float: left;
+    margin-right: 5px;
+    height: 30px;
+}
+
+/* ----------------------------------- */
+
+.listBox .meetingList{
+	width: 100%;
+	text-align: center;
+	box-sizing: border-box;
+	margin-top: 20px;
+}
+
+.listBox .meetingList td{
+	text-align: center;
+	padding: 7px 0;
+}
+
+.listBox .meetingList tr th{
+	font-weight: bold;
+	padding: 10px 0;
+}
+
+.listBox .meetingList tr {
+    border-bottom: 1px solid rgb(192, 192, 192);
+}
+
+.listBox .meetingList tr:hover{
+    cursor: pointer;
+}
+
+.listBox .meetingList tr:first-child {
+    border-top: 1px solid rgb(110, 110, 110);
+    border-bottom: 1px solid rgb(110, 110, 110);
+}
+
+/* ----------------------------------- */
+
+#paging {
+	margin: 0px auto;
+	width: 280px;
+	margin-top: 30px;
+}
+
+#paging ul {
+	margin: 10px 5px 10px 5px;
+	height: 30px;
+	display: flex;
+    justify-content: center;
+}
+
+#paging ul > li{
+	float: left;
+	margin: 0px 8px 0px 8px;
+}
+
+#paging ul > li a{
+	color: #212529;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+#paging ul > li.active{
+	font-size: 18px;
+	font-weight: bold;
+}
+
+/*
 .meetingList {
 	margin-top: 10px;
 	display: flex;
@@ -138,6 +230,7 @@
 .meetingList .meeting .memberList i:last-child {
 	margin-right: 0;
 }
+*/
 
 .fixedDate {
 	position: fixed;
