--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -193,12 +193,14 @@
   /* 팔로우 버튼 스타일 */
   .followButton {
     background-color:#fc5200;
+    cursor: pointer;
+    border-radius: 5px;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    
+    
     
   }
 
@@ -547,20 +549,24 @@ h2{
   }
   
  .MRdogCardBox {
+	 width: 260px;
     padding-left: 5px;
-    float: right;
+    float: left;
     /* padding: 20px; */
     border-style: solid;
     border-color: #dee2e6;
 
     /* 하단(border-bottom)에만 테두리를 추가합니다. */
     border-width: 0 0 2px 0;
-    margin-right: 80px;
+    margin-top: 2px;
+    margin-left: 10px;
+    /*margin-right: 80px;*/
 }
   
   .MRdogCards{
 	  margin-top: 5px;
 	  display: flow-root;
+	  height: 74px;
 	 
 	  
   }
@@ -580,6 +586,7 @@ h2{
  }
   
   .MRdogCardBox img{
+	  
 	  width: 50px;
 	  height: 50px;
   }
@@ -629,9 +636,41 @@ h2{
   
   .walkLogContent{
 	  float: left;
-	  width: 600px;
+	  width: 500px;
 	  margin-left: 110px;
 	  margin-top: 10px;
+  }
+  
+  .logButton{
+	  float: right;
+	  width: 110px;
+	  height: 83px;
+	  
+  }
+  
+  .regButton{
+	  margin-top: 10px;
+	  float: right;
+	  background-color:#fc5200;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .usedTrailButton{
+	  margin-top: 5px;
+	  margin-right: 5px;
+	  float: right;
+	  background-color:#fc5200;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
   }
   
   .contentModify{
@@ -745,14 +784,17 @@ h2{
 	  float: right;
   }
   
-  .replyDateCmtBox
+  /*replyDateCmtBox*/
   
   
   .MRborder{
-	  margin-top:10px;
+	  width: 800px;
+	  height: 1px;
+	  margin-top:20px;
+	  margin-bottom: 20px;
 	  border-style: solid;
 	 border-color:black;
-  	border-width: 0 0 2px 0 ;
+  	border-width: 0 0 1px 0 ;
   }
 
 	
