configuration.xml 에 meeting.xml 매퍼 추가되었습니다. + 모임 리스트 출력까지 완료 + meeting 테이블 구조가 변경되었습니다.

--- a/webapp/assets/css/walkMeeting/meetingInsert.css
+++ b/webapp/assets/css/walkMeeting/meetingInsert.css
@@ -118,6 +118,20 @@
 }
 
 
+.inputImg{
+	width: 100%;	
+}
+
+.inputImg input{
+	width: 500px;
+	display: inline-block;
+}
+
+.mapImg{
+	margin-top: 10px;
+	width: 100%;
+	height: 400px;
+}
 
 
 #map {
