--- a/webapp/assets/css/walkMeeting/meetingList.css
+++ b/webapp/assets/css/walkMeeting/meetingList.css
@@ -77,7 +77,7 @@
     border-bottom: 1px solid rgb(192, 192, 192);
 }
 
-.listBox .meetingList tr:hover{
+.listBox .meetingList tr td:hover{
     cursor: pointer;
 }
 
