--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -361,6 +361,31 @@ h2{
     justify-content: center;
 }
 
+.tooltip-inner{
+	background-color: #fc5200 !important;
+	
+}
+
+.custom-tooltip {
+    max-width: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    color: #000; /* 툴팁 내용의 텍스트 색상을 검은색으로 지정 */
+}
+
+/* Custom link style */
+.custom-link {
+    color: #007bff;
+    text-decoration: none;
+}
+
+/* Custom link hover style */
+.custom-link:hover {
+    text-decoration: underline;
+}
+
 .mainSidebar {
     height: 400px;
     
@@ -677,6 +702,7 @@ h2{
   }
   
   .usedTrailButton{
+	  width: 110px;
 	  margin-top: 5px;
 	  margin-right: 5px;
 	  float: right;
