--- a/webapp/assets/css/walkMeeting/meetingInsert.css
+++ b/webapp/assets/css/walkMeeting/meetingInsert.css
@@ -23,8 +23,21 @@
 }
 
 .inputGroup .inputItem {
-	width: 218px;
+	width: 450px;
+	display: flex;
+	justify-content: space-between;
 } 
+
+.inputGroup .inputItem .form-control{
+	width: 218px;
+
+}
+.inputGroup .inputItem .time{
+	width: 218px;
+	height: 38px;
+	border: 1px solid #dee2e6;
+	border-radius: 0.25em;
+}
 
 .inputTitle {
 	
@@ -64,7 +77,7 @@
 
 .dogList .dog p {
 	text-align: center;
-	font-size: 20px;
+	font-size: 17px;
 }
 
 .dogSlickBox{
@@ -117,6 +130,18 @@
 	margin: 10px 0 70px;
 }
 
+.dog .checkbox{
+	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 5px;
+}
+
+.dog .checkbox input{
+	border: 1px solid rgb(140, 140, 140);
+	border-radius: 0.25em;
+	width: 15px;
+	height: 15px;
+}
 
 .inputImg{
 	width: 100%;	
@@ -157,6 +182,7 @@
 	width: 300px;
 }
 
+
 .inputGroup .inputItem .form-switch input {
 	width: 68px;
 	height: 34px;
@@ -177,3 +203,59 @@
 	margin-right: 10px;
 	float: right;
 }
+
+
+#addressModal .modal-content{
+	width: 630px;
+}
+
+#addressModal .form-control{
+	width: 380px;
+}
+
+#addressModal #searchUser{
+	height: 38px;
+	border: 1px solid #dee2e6;
+	border-radius: 0.25em;
+}
+
+#addressModal .form-group{
+	height: 400px;
+	overflow-y: auto;
+}
+
+
+#addressModal #trailListTable tr{
+	width: 100%;
+}
+
+#addressModal #trailListTable tr td{
+	width: 1%;
+	text-align: center;
+}
+
+#addressModal #trailListTable #theadTr{
+	background-color: rgb(220,220,220);
+	font-size: 17px;
+	font-weight: bold;
+	border-bottom: 1px solid rgb(150,150,150);
+}
+
+#addressModal #trailListTable #theadTr td{
+	padding: 5px 0;
+}
+
+#addressModal #trailListTable .trailSelect{
+	border-bottom: 1px solid rgb(150,150,150);
+}
+
+#addressModal #trailListTable .trailSelect td{
+	padding: 10px 0;
+}
+
+#addressModal #trailListTable .trailSelect:hover{
+	cursor: pointer;
+}
+
+
+
