--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -521,32 +521,40 @@ h2{
 	  
 	  
   }
-  .MRtitleBox{
-	  width: 300px;
-	  height: 50px;
-  	float: left;
-  	margin-right: 30px;
-	  
-  }
-  
-  .MRtitleBox > a{
-	  text-decoration: none;
-	  color : black;
-  }
-  
-  .MRtime{
-	  
-	  font-size: 18px;
-    line-height: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .MRtitle{
-	  font-size: 28px;
-    line-height: 34px;
-    margin-bottom: 10px;
-     
-  }
+ .MRtitleBox {
+  width: 300px;
+  height: 50px;
+  float: left;
+  margin-right: 30px;
+}
+
+.MRtitleBox > a {
+  text-decoration: none !important;
+  color: black !important;
+}
+
+.MRtitleBox:hover .MRtitle {
+  color: inherit !important;
+  text-decoration: none !important;
+}
+
+.MRtime {
+  font-size: 18px;
+  line-height: 16px;
+  margin-bottom: 10px;
+}
+
+.MRtitle {
+  font-size: 28px;
+  line-height: 34px;
+  margin-bottom: 10px;
+  color: black;
+  text-decoration: none;
+}
+
+.MRtitle:hover {
+  cursor: pointer;
+}
   
   .MRrecordBox{
 	  width: 300px;
