모임 신청 / 신청 취소 / 모임장이면 모임 삭제

--- a/webapp/assets/css/walkMeeting/meetingDetail.css
+++ b/webapp/assets/css/walkMeeting/meetingDetail.css
@@ -159,4 +159,19 @@
 	color: white;
 }
 
+.endMessage{
+	width: 100%;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	padding: 10px 0;
+	background-color: lightgray;
+}
+
+
+
+
+
 
