--- a/webapp/assets/css/setting/index.css
+++ b/webapp/assets/css/setting/index.css
@@ -1,5 +1,102 @@
 @charset "UTF-8";
 
+/*google web font*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Noto+Sans+KR:wght@500&display=swap');
+/* 'Montserrat' */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Noto+Sans+KR:wght@500&display=swap');
+/* 'Monoton' */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Raleway:wght@300&display=swap');
+/* 'Raleway' */
+
+
+.global-header {
+	border-bottom: 1px solid rgb(208, 208, 208);
+	z-index: 10;
+	position: absolute;
+	height: 55px;
+	width: 100%;
+	padding: 0 15px;
+	background-color: white;
+}
+
+.global-header nav {
+	width: 1250px;
+	margin: auto;
+}
+
+.global-header nav > ul {
+	padding: 0;
+	float: left;
+}
+
+.global-header nav ul .logo img{
+	height: 31px;
+}
+
+.global-header nav ul .logo {
+	margin-right: 20px;
+}
+.global-header > nav ul > li a{
+	text-decoration: none;
+	color: grey;
+}
+.global-header > nav ul > li {
+	display: inline-block;
+	line-height: 55px;
+	margin-right: 13px;
+}
+
+.global-header .my-menu{
+	float: right;
+}
+
+.global-header .my-menu .right {
+	line-height: 55px;
+	float: right;
+	padding-left: 16px;
+}
+
+.global-header .my-menu .left {
+	line-height: 55px;
+	float: left;
+}
+
+.global-header .right li:last-child {
+	margin-right: 0;
+}
+
+.global-header nav ul li .drop-toggle::after{
+	margin-left: 5px;
+	width: 1.25em;
+	line-height: 0;
+	content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+	transition: transform .35s ease;
+	transform-origin: .5em 50%;
+	transform: rotate(90deg);
+}
+
+.global-header nav ul li .drop-toggle[aria-expanded="true"] {
+	color: #FC5200;
+}
+
+.global-header nav ul li .dropdown-menu .dropdown-item {
+	line-height: normal;
+	padding-top: 13px;
+	padding-bottom: 13px;
+}
+
+.global-header nav .orange{
+	color: #FC5200;	
+	font-weight: bold;
+}
+
+
+/*/////////////////////////////////////////////*/
+
 
 section{
     position: relative;
@@ -9,9 +106,9 @@ section{
 .videoFrame{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 55px);
     left:0;
-    top: 0;
+    top: 55px;
 }
 .videoFrame video{
     display: block;
@@ -24,10 +121,85 @@ section{
     object-fit: cover;
 }
 
+.gradientBg{
+    position: absolute;
+    background: linear-gradient(-140deg, rgb(255, 117, 51), transparent);
+    left:0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
 
+/*/////////////////////////////////////////*/
 
+.main_box{
+    position: relative;
+    height: 100%;
+    width: auto;
+}
+.main_box .logo{
+    position: absolute;
+    left: 100px;
+    top: 50px;
+}
+.main_box .logo img{
+    width: 80px;
+}
+.main_box .title{
+    width: 600px;
+    position: absolute;
+    left: 100px;
+    bottom: 50px;
+    font-family: 'Montserrat', sans-serif;
+}
+.main_box .title p{
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+    color: #fff;
+    word-break: normal;
+}
+.main_box .title h2{
+    font-size: 54px;
+    line-height: 1.1;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #fff;
+}
+.main_box .title h2 span{
+    display: block;
+    color: crimson;
+}
+.main_box .title .btns button{
+    width: 150px;
+    padding: 7px;
+    background: #fff;
+    color: black;
+    border-radius: 20px;
+    border: 2px solid #fff;
+}
+.main_box .title .btns .book{
+    margin-right: 5px;
+    background: transparent;
+    color: #fff;
+}
 
-
-
+.main_box .aniv{
+    position: absolute;
+    right: 100px;
+    bottom: 50px;
+    color: #fff;
+    text-align: center;
+}
+.main_box .aniv span{
+    display: block;
+    font-size: 30px;
+}
+.main_box .aniv strong{
+    font-size: 120px;
+    font-family: 'Monoton', sans-serif;
+    line-height: 1.2;
+    font-weight: 100;
+}
 
 
