--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -709,10 +709,17 @@ h2{
     border: none;
   }
   
+  .datepicker{
+	  
+	  margin-right: 100px;
+	  
+  }
+  
+  
   .usedTrailButton{
 	  width: 110px;
 	  margin-top: 5px;
-	  margin-right: 5px;
+	 /* margin-right: 5px;*/
 	  float: right;
 	  background-color:#fc5200;
     cursor: pointer;
@@ -721,6 +728,23 @@ h2{
     padding: 5px 10px;
     font-size: 16px;
     border: none;
+  }
+  
+  .noData{
+	  display: flow-root;
+	  margin-top: 50px;
+  }
+  
+  .noData > img{
+	  
+	  width: 200px;
+	  height: 200px;
+	  margin-right: 30px;
+	  float: left;
+  }
+  
+  .noData >h1{
+	  float: left;
   }
   
    #paging {
@@ -920,36 +944,38 @@ h2{
   
   .statsTable{
 	  margin-bottom: 20px;
-	  border-style: solid;
-	 border-color:#dee2e6;
+	   border: 2px solid rgb(192, 192, 192);
+	  
   }
   
   .statsTable th{
 	  
 	  padding-left: 10px;
-  } .statsTableAll th{
+  }
+  
+   .statsTableAll th{
 	  padding-left: 10px;
+	   
   }
   
   
   
   .statsTable td{
 	  width: 200px;
-	  border-left: 1px solid #f0f0f5;
-	  border-bottom: 1px solid #f0f0f5;
+	  border-left: 1px solid rgb(192, 192, 192);
+	  border-top: 1px solid rgb(192, 192, 192);
     padding: 5px 10px;
     background-color: rgba(0,0,0,0.03);
   }
   
   .statsTableAll{
-	  border-style: solid;
-	 border-color:#dee2e6;
+	 border: 2px solid rgb(192, 192, 192);
   }
   
   .statsTableAll td{
 	  width: 200px;
-	  border-left: 1px solid #f0f0f5;
-	  border-bottom: 1px solid #f0f0f5;
+	   border-left: 1px solid rgb(192, 192, 192);
+	  border-top: 1px solid rgb(192, 192, 192);
     padding: 5px 10px;
     background-color: rgba(0,0,0,0.03);
   }
