산책로, MeetingVo 수정

--- a/webapp/assets/css/walkTrail/trailDetail.css
+++ b/webapp/assets/css/walkTrail/trailDetail.css
@@ -49,7 +49,7 @@
 }
 
 /* 프로필 */
-.detail-bar > img,
+.detail-bar > img
 .comment-info > img,
 .ranking-detail-bar > img,
 .img-info-detail > img,
@@ -57,6 +57,7 @@
     border-radius: 50%;
 }
 
+/* 이미지 수 */
 .img-info-detail .imgCount {
     height: 25px;
     width: 25px;
@@ -68,10 +69,16 @@
     border-radius: 50%;
 }
 
+/* google chart */
+/*rect {
+	width: 100%;
+	height: 550px;
+}*/
+
 /* map-container main */
 .map-container {
-	/*height: 1425px;*/
-	height: 1150px;
+	height: 1425px;
+	/*height: 1150px;*/
 	width: 100%;
 	border-bottom: 1px solid #dee2e6;
 }
@@ -165,10 +172,11 @@
 	margin: 35px 0px 15px;
 }
 .detail-chart {
-	height: 300px;
-    width: 650px;
-    background-color: lightgray;
-    margin-left: 60px;
+	/*height: 300px;*/
+    /* width: 650px;*/
+    display: flow-root;
+    /*background-color: lightgray;*/
+    /*margin-left: 60px;*/
 }
 /*.detail-border {
 	margin-top: 50px;
@@ -225,11 +233,16 @@
 	height: 86px;
 }
 .map-sidebar > div.detail-bar > img,
-.map-sidebar > div.ranking-detail-bar > img {
+.map-sidebar > div.detail-bar > a > img,
+.map-sidebar > div.ranking-detail-bar > img
+.map-sidebar > div.ranking-detail-bar > a > img,
+.ranking-detail-bar > a > img {
 	height: 65px;
 	width: 65px;
 	margin-left: 20px;
+	border-radius: 50%;
 }
+
 .detail-bar .detail-text,
 .ranking-detail-bar .detail-text {
 	display: flex;
@@ -401,6 +414,10 @@
 	width: 600px;
 	min-height: 520px;
 }
+.modal .modal-dialog .modal-detail {
+	width: 700px;
+	min-height: 520px;
+}
 .modal .modal-dialog {
 	margin: 100px auto;
 }
@@ -438,9 +455,9 @@
 .meetingInfo .comment-img > img {
 	/*height: 100%;
 	object-fit:cover;*/
-	height: 100%;
-	width: 100%;
-	object-fit:cover;
+	max-width: 100%;
+  height: auto;
+  display: block;
 }
 .img-content .imgCount,
 .comment-img .imgCount,
@@ -457,6 +474,14 @@
    line-height: 30px;
    text-align: center;
    font-size: 17px;
+}
+
+.detail-img-content .imgBox {
+	height: 450px;
+	width: 500px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 /* 작성 버튼 변경 */
@@ -565,6 +590,10 @@
     width: 100%;
     background-color: white;
 }
+.comment-content > span > i.fa-solid,
+.detail-modal-info > span > i.fa-solid {
+	color: #fc5200;
+}
 
 /* comment-info */
 .comment-info {
@@ -573,9 +602,13 @@
     width: 265px;
 }
 .comment-info > img,
-.img-info > div > img {
+.comment-info > a > img,
+.comment-detail .comment-info > a > img,
+.img-info > div > img,
+.img-info-detail > a > img {
 	height: 60px;
 	width: 60px;
+	border-radius: 50%;
 }
 .comment-info .detail-text,
 .img-info .img-info-detail .detail-text {
@@ -623,8 +656,9 @@
 .detail-img-content {
 	height: 450px;
     width: 500px;
-	display: flex;
-    justify-content: center;
+	/*display: flex;*/
+    /*justify-content: center;*/
+    overflow: hidden;
 }
 .modal-body .fa-chevron-left, .modal-body .fa-chevron-right {
 	font-size: 30px;
@@ -633,6 +667,14 @@
 
 .img-slider {
 	display: flex;
+}
+
+.img-slider > i{
+	cursor: pointer;
+}
+
+.img-slider > i:hover {
+	color: #fc5200;;
 }
 
 /* img-info */
@@ -686,7 +728,7 @@
 
 /***** trailDetailDeleted *****/
 
-.contents > h1 > i.deleted {
+.contents > h1 > i.fa-solid {
     color: #fc5200;
 }
 .map-container-left .deleted {
@@ -746,6 +788,10 @@
 	width: 60%;
 	height: 200px;
 	padding-left: 15px;
+}
+.meetingList .meeting .meetingContent .meetingInfo > a {
+	text-decoration: none;
+	color: black;
 }
 .meetingList .meeting .meetingContent .meetingInfo p {
 	margin-bottom: 5px;
@@ -818,7 +864,7 @@
 
 .meetingList .walkLog {
 	width: 470px;
-    height: 190px;
+    height: 200px;
 }
 .meetingList .meeting .walkTitle {
     padding: 10px;
@@ -827,10 +873,12 @@
     justify-content: space-evenly;
 }
 .meetingList .meeting .meetingTitle .walk-title1 {
-	margin-right: 50px;
+    width: 60px;
+    margin-right: 20px;
 }
 .meetingList .meeting .meetingTitle .walk-title2 {
-	margin-right: 150px;
+    width: 85px;
+    margin-right: 135px;
 }
 
 .img-info-detail > span.walkLogLike {
