--- a/webapp/assets/css/walkTrail/trailMain.css
+++ b/webapp/assets/css/walkTrail/trailMain.css
@@ -235,7 +235,7 @@
     padding: 10px 15px;
     margin-right: 15px;
 }
-.userInfo .userDetail > img {
+.userInfo .userDetail > a > img {
     height: 55px;
     width: 55px;
     border-radius: 50%;
@@ -244,6 +244,10 @@
 	display: flex;
 	flex-direction: column;
 	margin-left: 20px;
+}
+.userInfo .info .detail-text > a {
+	text-decoration: none;
+	color: rgba(0,0,0,0.75);
 }
 .userInfo .userBtn {
     height: 45px;
