--- a/webapp/assets/css/walkBlog/index.css
+++ b/webapp/assets/css/walkBlog/index.css
@@ -239,7 +239,9 @@
 .maindogCardBox > div{
 	width: 200px;
 	height: 66px;
-	border: 2px solid rgb(192, 192, 192);
+	border-style: solid;
+	 border-color:#dee2e6;
+	 border-width: 1px;
   	display: flow-root;
 }
 
@@ -487,7 +489,9 @@ h2{
 .MRprofileBox{
 	   display: flow-root;
 	padding: 15px;
-	border: 2px solid rgb(192, 192, 192);
+	border-style: solid;
+	 border-color:#dee2e6;
+	 border-width: 1.5px;
 	width: 780px;
 	/*height: 204px;*/
 	float: left;
@@ -564,7 +568,9 @@ h2{
 	  border-style: solid;
 	  
 	  
-    border-color: rgb(192, 192, 192);
+	  
+	  
+     border-color:#dee2e6;
 
     /* 하단(border-bottom)에만 테두리를 추가합니다. */
     border-width: 0 0 2px 0;
@@ -786,6 +792,7 @@ h2{
 	  /*height: 760px;*/
 	  border-style: solid;
   	border-color:#dee2e6;
+  	border-width: 1.5px;
 	  
   }
   .MRwalkData > img{
