모임에서 블로그 갈 수 있음

--- a/webapp/assets/css/walkMeeting/meetingDetail.css
+++ b/webapp/assets/css/walkMeeting/meetingDetail.css
@@ -30,6 +30,11 @@
 	margin-right: 100px;
 }
 
+.inputGroup .items a{
+	text-decoration: none;
+	font-weight: bold;
+	color: #212529;
+}
 
 .dogList {
 	display: flex;
@@ -53,6 +58,12 @@
 .dogList .dog p {
 	text-align: center;
 	font-size: 17px;
+}
+
+.dogList .dog p a{
+	text-decoration: none;
+	font-weight: bold;
+	color: #212529;
 }
 
 .dog .checkbox{
